# librclone-py

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: publish-rclone.yml  update-rclone.yml
librclone/lib/: librclone.h
